# serializer version: 1
# name: test_dual_pixel_defocus_deblurring
  ImageModelDescriptor(
    architecture=MIRNet2Arch(
      id='MIRNet2',
      name='MIRNet2',
    ),
    input_channels=6,
    bytes=23442880,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=4, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '80nf',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_enhancement_lol
  ImageModelDescriptor(
    architecture=MIRNet2Arch(
      id='MIRNet2',
      name='MIRNet2',
    ),
    input_channels=3,
    bytes=23434240,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=4, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '80nf',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
